# CaptureTheBanana

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  LICENSE  README.md  THIRDPARTY.md  _travis.yml
cmake/: CtbVersion.in  FindSDL2.cmake  FindSDL2_IMAGE.cmake  FindSDL2_MIXER.cmake
common/: CMakeLists.txt
common/src/common/: ConsoleColor.cpp  ConsoleColor.hpp  Exceptions.cpp  Exceptions.hpp  Utils.cpp  Utils.hpp  Vector2d.hpp
ctb/: CMakeLists.txt
ctb/src/ctb/: Main.cpp
docs/: doxygen_main.md
docs/wiki/: home.md
docs/wiki/development/: build-instructions.md  contributing.md  file-formats.md
docs/wiki/game/: controls.md  editor.md  game-design.md
docs/wiki/overview/: about.md  installation.md
editor/: CMakeLists.txt
editor/gui/: LayerSettingsDialog.ui  LevelBackgroundSettingsDialog.ui  LevelSettingsDialog.ui  MainWindow.ui  ResizeDialog.ui  SetupBackgroundDialog.ui  SetupDialog.ui  TileDialog.ui
editor/src/editor/: Main.cpp  SpawnInfo.hpp
editor/src/editor/entry/: BackgroundListWidgetItem.cpp  BackgroundListWidgetItem.hpp
editor/src/editor/gui/: LayerSettingsDialog.cpp  LayerSettingsDialog.hpp  LevelBackgroundSettingsDialog.cpp  LevelBackgroundSettingsDialog.hpp  LevelSettingsDialog.cpp  LevelSettingsDialog.hpp  MainWindow.cpp  MainWindow.hpp  ResizeDialog.cpp  ResizeDialog.hpp  SetupBackgroundDialog.cpp  SetupBackgroundDialog.hpp  SetupDialog.cpp  SetupDialog.hpp  TileDialog.cpp  TileDialog.hpp
editor/src/editor/model/: MainWindowModel.cpp  MainWindowModel.hpp
editor/src/editor/scene/: GraphicsItems.cpp  GraphicsItems.hpp  GraphicsScenes.cpp  GraphicsScenes.hpp
engine/: CMakeLists.txt
engine/src/engine/: Engine.cpp  Engine.hpp  Object.hpp  Window.cpp  Window.hpp
engine/src/engine/audio/: Music.cpp  Music.hpp  SoundDummy.cpp  SoundEffect.cpp  SoundEffect.hpp  SoundManager.cpp  SoundManager.hpp
engine/src/engine/core/: Camera.cpp  Camera.hpp  GC.cpp  GC.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp
engine/src/engine/graphics/: ActingRenderable.cpp  ActingRenderable.hpp  Background.cpp  Background.hpp  LayerRenderer.cpp  LayerRenderer.hpp  PhysicalRenderable.cpp  PhysicalRenderable.hpp  Rect.cpp  Rect.hpp  SDLRenderable.hpp  TextureBasedRenderable.cpp  TextureBasedRenderable.hpp  TilesetRenderable.cpp  TilesetRenderable.hpp
engine/src/engine/gui/: Font.cpp  Font.hpp  Label.cpp  Label.hpp  Statusbar.cpp  Statusbar.hpp
engine/src/engine/input/: Controller.cpp  Controller.hpp  Input.cpp  Input.hpp  InputManager.cpp  InputManager.hpp  Keyboard.cpp  Keyboard.hpp
engine/src/engine/menu/: CreditsMenu.cpp  CreditsMenu.hpp  EndMenu.cpp  EndMenu.hpp  HighscoreMenu.cpp  HighscoreMenu.hpp  Menu.cpp  Menu.hpp  NewHighscoreMenu.cpp  NewHighscoreMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  StartMenu.cpp  StartMenu.hpp
engine/src/engine/misc/: Highscores.cpp  Highscores.hpp
engine/src/engine/physics/: ActingKinematics.cpp  ActingKinematics.hpp  Kinematics.cpp  Kinematics.hpp  LevelContactListener.cpp  LevelContactListener.hpp  LevelWorld.cpp  LevelWorld.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicalTileSet.cpp  PhysicalTileSet.hpp
engine/src/engine/scene/: Bot.cpp  Bot.hpp  Door.cpp  Door.hpp  Fist.cpp  Fist.hpp  Flag.cpp  Flag.hpp  Gun.cpp  Gun.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Ufo.cpp  Ufo.hpp  Weapon.hpp  Zombie.cpp  Zombie.hpp
engine/src/engine/util/: Color.hpp  Exceptions.hpp  Random.cpp  Random.hpp  SdlDriver.cpp  SdlDriver.hpp  Vector2d.hpp
parser/: CMakeLists.txt
parser/src/parser/: BackgroundConfig.hpp  BotConfig.hpp  DynamicTilestore.cpp  DynamicTilestore.hpp  GameConfig.hpp  GameParser.cpp  GameParser.hpp  LevelConfig.hpp  LevelParser.cpp  LevelParser.hpp  PlayerConfig.hpp  ProjectileConfig.hpp  TilesetConfig.hpp  WeaponConfig.hpp
res/: Center.xml  LICENSE.md  Space.xml  Winter.xml  game.xml
res/fonts/: std_12px.fnt  std_18px.fnt
scripts/: run-clang-format.sh
scripts/.travis/: clang-format.sh  install-deps-linux.sh  install-deps-osx.sh  script.sh
tests/: CMakeLists.txt
tests/unit-tests/common/: Utils.cpp
